# 0_T5_TuyaOpen

TuyaOpen/: SPARKLEIOT_T5_DEV.patch
TuyaOpen/apps/leds-pixel/: .config  CMakeLists.txt  app_default.config
TuyaOpen/apps/leds-pixel/config/: SPARKLEIOT_T5_DEV.config
TuyaOpen/apps/leds-pixel/src/: example_led-pixels.c  example_ws2812_spi2.c  example_ws2812_spi2.h
TuyaOpen/apps/rgb_cycle_demo/: CMakeLists.txt  Kconfig  README_zh.md  app_default.config
TuyaOpen/apps/rgb_cycle_demo/include/: rgb_led.h
TuyaOpen/apps/rgb_cycle_demo/src/: rgb_led.c  tuya_main.c
TuyaOpen/apps/sdcard_demo/: CMakeLists.txt  Kconfig  README_zh.md
TuyaOpen/apps/sdcard_demo/config/: SPARKLEIOT_T5_DEV.config
TuyaOpen/apps/sdcard_demo/src/: tuya_main.c
TuyaOpen/apps/sensor_display_demo/: CMakeLists.txt  Kconfig  README_zh.md  app_default.config
TuyaOpen/apps/sensor_display_demo/include/: m117b.h  sensor_i2c_bus.h  sensor_service.h  sensor_ui.h  sh3001.h  tuya_lvgl.h
TuyaOpen/apps/sensor_display_demo/src/: m117b.c  sensor_i2c_bus.c  sensor_service.c  sensor_ui.c  sh3001.c  tuya_lvgl.c  tuya_main.c
TuyaOpen/apps/tuya.ai/your_chat_bot/include/: tuya_config.h
TuyaOpen/apps/tuya.ai/your_otto_robot/config/: T5AI_OTTO_LCD_ST7789.config
TuyaOpen/apps/tuya_cloud/switch_demo/src/: tuya_config.h
TuyaOpen/boards/T5AI/: Kconfig
TuyaOpen/boards/T5AI/SPARKLEIOT_T5_DEV/: Kconfig  board_com_api.c
TuyaOpen/examples/peripherals/sd/src/: example_sd.c
TuyaOpen/src/peripherals/button/: CMakeLists.txt
TuyaOpen/src/tal_cli/src/: tal_cli.c
TuyaOpen/src/tuya_cloud_service/schema/: tuya_iot_dp.c
